     being composed, along with its included text.

   * The variable `vm-w3m-use-w3m-minor-mode-map' is set to `nil' by default
     so that VM key bindings will be functional inside HTML text (when
     displayed using the Emacs-w3m browser).

   * The variable `vm-mutable-frames' has a new name to convey its sense
     better: `vm-mutable-frame-configuration'.  The old name still works.

VM 8.2.0b  (2011-12-28)

  CHANGES

   * New customization variable `vm-spam-score-headers' allows the
     extraction of spam scores.  (Replaces the former variable
     `vm-vs-spam-score-headers' used by vm-avirtual.el.) 

   * The variable `vm-mime-alternative-select-method' renamed to
     `vm-mime-alternative-show-method' to make it clear that it only applies
     to the viewing of messages.  The new variable
     `vm-mime-alternative-yank-method' controls the selection of
     alternatives for citation in replies.

   * `vm-submit-bug-report' now uses Emacs message-mode for composing the
     bug report (whereas it previously used mail-mode with VM-specific
     tweaks).  Please do C-h m to find the functions you might need.

   * Terminology: Interactively created virtual folders are now called
     "Search Folders".  They have a stronger connection to their parent
     folders and inherit some attributes, e.g., the read-only property.

  IMPROVEMENTS

   * New variable `vm-mail-use-sender-address' allows `vm-mail' to pick up
     the sender of the current message as the recipient of a new message
     composition. 

   * See the new info manual section on "IMAP folders" for newly documented
     functions.  In particular, `vm-list-imap-folders' now lists the message
     counts in the IMAP folders.  

   * New variable: `vm-sort-messages-by-delivery-date' allows messages to be
     sorted by the date of their delivery instead of the date sent.

   * New virtual folder selectors added: `message-id', `uid' (for IMAP) and
     `uidl' (for POP).
