@@ -42,6 +42,10 @@
   (require 'vm-reply)
 )
 
+(eval-and-compile
+  (require 'utf7)
+)
+
 (declare-function vm-session-initialization 
 		  "vm.el" ())
 (declare-function vm-submit-bug-report 
@@ -279,6 +283,133 @@ using cached data."
   (vm-assert (or (eq vm-imap-session-type 'active) 
 		 (eq vm-imap-session-type 'valid))))
 
+;; Handling mailbox names and maildrop specs
+
+(defsubst vm-imap-quote-string (string)
+  (vm-with-string-as-temp-buffer string 'vm-imap-quote-buffer))
+
+(defun vm-imap-quote-buffer ()
+  (goto-char (point-min))
+  (insert "\"")
+  (while (re-search-forward "[\"\\]" nil t)
+    (forward-char -1)
+    (insert "\\")
+    (forward-char 1))
+  (goto-char (point-max))
+  (insert "\""))
+
+(defsubst vm-imap-quote-mailbox-name (name)
+  (vm-imap-quote-string (utf7-encode name t)))
+
+(defsubst vm-imap-encode-mailbox-name (name)
+  (utf7-encode name t))
+
+(defsubst vm-imap-decode-mailbox-name (name)
+  (utf7-decode name t))
+
+;;;###autoload
+(defun vm-imap-make-filename-for-spec (spec)
+  "Returns a cache file name appropriate for the IMAP maildrop
+specification SPEC."
+  (let (md5)
+    (setq spec (vm-imap-normalize-spec spec))
+    (setq md5 (vm-md5-string spec))
+    (expand-file-name (concat "imap-cache-" md5)
+		      (or vm-imap-folder-cache-directory
+			  vm-folder-directory
+			  (getenv "HOME")))))
+
+;;;###autoload
+(defun vm-imap-normalize-spec (spec)
+  (let (comps)
+    (setq comps (vm-imap-parse-spec-to-list spec))
+    (setcar (vm-last comps) "*")		; scrub password
+    (setcar comps "imap")		; standardise protocol name
+    (setcar (nthcdr 2 comps) "*")	; scrub portnumber
+    (setcar (nthcdr 4 comps) "*")	; scrub authentication method
+    (setq spec (mapconcat (function identity) comps ":"))
+    spec ))
+
+;;;###autoload
+(defun vm-imap-account-name-for-spec (spec)
+  "Returns the IMAP account name for maildrop specification SPEC, by
+looking up `vm-imap-account-alist' or nil if there is no such account."
+  (let ((alist vm-imap-account-alist)
+	comps account-comps)
+    (setq comps (vm-imap-parse-spec-to-list spec))
+    (catch 'return
+    (while alist
+      (setq account-comps (vm-imap-parse-spec-to-list (car (car alist))))
+      (if (and (equal (nth 1 comps) (nth 1 account-comps)) ; host
+	       (equal (nth 5 comps) (nth 5 account-comps))) ; login
+	  (throw 'return (cadr (car alist)))
+	(setq alist (cdr alist))))
+    nil)))
+
+;;;###autoload
+(defun vm-imap-folder-for-spec (spec)
+  "Returns the IMAP folder for maildrop specification SPEC in the
+format account:mailbox."
+  (let (comps account-comps (alist vm-imap-account-alist))
+    (setq comps (vm-imap-parse-spec-to-list spec))
+    (catch 'return
+    (while alist
+      (setq account-comps (vm-imap-parse-spec-to-list (car (car alist))))
+      (if (and (equal (nth 1 comps) (nth 1 account-comps)) ; host
+	       (equal (nth 5 comps) (nth 5 account-comps))) ; login
+	  (throw 'return (concat (cadr (car alist)) ":" (nth 3 comps)))
+	(setq alist (cdr alist))))
+    nil)))
+
+;;;###autoload
+(defun vm-imap-spec-for-account (account)
+  "Returns the IMAP maildrop spec for ACCOUNT, by looking up
+`vm-imap-account-alist' or nil if there is no such account."
+  (car (rassoc (list account) vm-imap-account-alist)))
+
+;;;###autoload
+(defun vm-imap-parse-spec-to-list (spec)
+  "Parses the IMAP maildrop specification SPEC and returns a list of
+its components."
+  (let ((list (vm-parse spec "\\([^:]+\\):?" 1 6)))
+    ;; (append (butlast list 4)
+    ;;         (cons (utf7-decode (nth 3 list) t)
+    ;;               (last list 3)))
+    list
+    ))
+
+;;;###autoload
+(defun vm-imap-encode-list-to-spec (list)
+  "Convert a LIST of components into a maildrop specification."
+    (mapconcat 'identity list ":")
+  ;; (mapconcat 'identity
+  ;;            (append (butlast list 4)
+  ;;                    (cons (utf7-encode (nth 3 list) t)
+  ;;                          (last list 3)))
+  ;;            ":")
+  )
+
+;;;###autoload
+(defun vm-imap-spec-for-mailbox (spec mailbox)
+  "Return a modified version of the maildrop specification SPEC
+for accessing MAILBOX."
+  (let ((list (vm-parse spec "\\([^:]+\\):?" 1 6)))
+    (mapconcat 'identity 
+	       (append (vm-elems 3 list) (cons mailbox (nthcdr 4 list)))
+	       ":")))
+
+(defun vm-imap-spec-list-to-host-alist (spec-list)
+  (let (host-alist spec host)
+    (while spec-list
+      (setq spec (vm-imapdrop-sans-password-and-mailbox (car spec-list)))
+      (setq host-alist (cons
+			(list
+			 (nth 1 (vm-imap-parse-spec-to-list spec))
+			 spec)
+			host-alist)
+	    spec-list (cdr spec-list)))
+    host-alist ))
+
 ;; Simple macros
 
 (defsubst vm-imap-delete-message (process n)
@@ -297,17 +428,17 @@ using cached data."
   (put 'vm-imap-normal-error 'error-message "IMAP error")
   )
 
-(defun vm-imap-protocol-error (&rest args)
+(defsubst vm-imap-protocol-error (&rest args)
   (let ((local (make-local-variable 'vm-imap-keep-trace-buffer)))
     (unless (symbol-value local) (set local 1)))
   (signal 'vm-imap-protocol-error (list (apply 'format args))))
 
-(defun vm-imap-normal-error (&rest args)
+(defsubst vm-imap-normal-error (&rest args)
   (let ((local (make-local-variable 'vm-imap-keep-trace-buffer)))
     (unless (symbol-value local) (set local 1)))
   (signal 'vm-imap-normal-error (list (apply 'format args))))
 
-(defun vm-imap-capability (cap &optional process)
+(defsubst vm-imap-capability (cap &optional process)
   (if process
       (with-current-buffer (process-buffer process)
 	(memq cap vm-imap-capabilities))
@@ -347,21 +478,6 @@ connection is established to the IMAP server and message bodies
 are not fetched.  In the 'autoconnect mode, a connection is
 established whenever a synchronization operation is performed and the
 connection mode is then turned into 'online.")
-
-(defun delete-common-elements (list1 list2 pred)
-  ;; Takes two lists of unique values with dummy headers and
-  ;; destructively deletes all their common elements
-  (rplacd list1 (sort (cdr list1) pred))
-  (rplacd list2 (sort (cdr list2) pred))
-  (while (and (cdr list1) (cdr list2))
-    (cond ((equal (car (cdr list1)) (car (cdr list2)))
-	   (rplacd list1 (cdr (cdr list1)))
-	   (rplacd list2 (cdr (cdr list2))))
-	  ((apply pred (car (cdr list1)) (car (cdr list2)) nil)
-	   (setq list1 (cdr list1)))
-	  (t
-	   (setq list2 (cdr list2)))
-	  )))
 
 
 ;; -----------------------------------------------------------------------
@@ -1418,7 +1534,7 @@ Returns a list containing:
 	(need-ok t))
     (vm-imap-log-token 'select-mailbox)
     (vm-imap-send-command 
-     process (format "%s %s" command (vm-imap-quote-string mailbox)))
+     process (format "%s %s" command (vm-imap-quote-mailbox-name mailbox)))
     (while need-ok
       (setq response (vm-imap-read-response-and-verify process command))
       (cond ((vm-imap-response-matches response '* 'OK 'vector)
@@ -2287,19 +2403,6 @@ Numbers are included among atoms."
 	(setq list (cdr (cdr list))))
       nil )))
 
-(defun vm-imap-quote-string (string)
-  (vm-with-string-as-temp-buffer string 'vm-imap-quote-buffer))
-
-(defun vm-imap-quote-buffer ()
-  (goto-char (point-min))
-  (insert "\"")
-  (while (re-search-forward "[\"\\]" nil t)
-    (forward-char -1)
-    (insert "\\")
-    (forward-char 1))
-  (goto-char (point-max))
-  (insert "\""))
-
 (defun vm-imap-poke-session (process)
   "Poke the IMAP session by sending a NOOP command, just to make sure
 that the session is active.  Returns t or nil."
@@ -2782,7 +2885,7 @@ server should be issued by UID, not message sequence number."
       (setq copied-flags (copy-sequence cached-flags))
       (setq labels (cons nil (copy-sequence labels)))
       ;; Ignore labels that are both in vm and the server
-      (delete-common-elements labels copied-flags 'string<)
+      (vm-delete-common-elements labels copied-flags 'string<)
       ;; Ignore reversible flags that we have locally reversed -- Why?
       ;; (mapc (lambda (flag) (delete flag copied-flags))
       ;;  '("\\seen" "\\deleted" "\\flagged"))
@@ -2889,7 +2992,7 @@ MAILBOX."
 	  ;;----------------------------------
 	  (vm-imap-send-command process
 				(format "APPEND %s %s {%d}"
-					(vm-imap-quote-string mailbox)
+					(vm-imap-quote-mailbox-name mailbox)
 					(if flags flags "()")
 					(length string)))
 	  ;;--------------------------------
@@ -2956,7 +3059,7 @@ operation of the server to minimize I/O."
 	   process
 	   (format "UID COPY %s %s"
 		   (vm-imap-uid-of m)
-		   (vm-imap-quote-string mailbox)))
+		   (vm-imap-quote-mailbox-name mailbox)))
 	  ;;--------------------------------
 	  (vm-imap-session-type:set 'active)
 	  ;;--------------------------------
@@ -3799,99 +3902,6 @@ is being invoked interactively."
 ;; 	(setq list (cdr list))))
 ;;     (and list (car list)))
 
-;;;###autoload
-(defun vm-imap-make-filename-for-spec (spec)
-  "Returns a cache file name appropriate for the IMAP maildrop
-specification SPEC."
-  (let (md5)
-    (setq spec (vm-imap-normalize-spec spec))
-    (setq md5 (vm-md5-string spec))
-    (expand-file-name (concat "imap-cache-" md5)
-		      (or vm-imap-folder-cache-directory
-			  vm-folder-directory
-			  (getenv "HOME")))))
-
-;;;###autoload
-(defun vm-imap-normalize-spec (spec)
-  (let (comps)
-    (setq comps (vm-imap-parse-spec-to-list spec))
-    (setcar (vm-last comps) "*")		; scrub password
-    (setcar comps "imap")		; standardise protocol name
-    (setcar (nthcdr 2 comps) "*")	; scrub portnumber
-    (setcar (nthcdr 4 comps) "*")	; scrub authentication method
-    (setq spec (mapconcat (function identity) comps ":"))
-    spec ))
-
-;;;###autoload
-(defun vm-imap-account-name-for-spec (spec)
-  "Returns the IMAP account name for maildrop specification SPEC, by
-looking up `vm-imap-account-alist' or nil if there is no such account."
-  (let ((alist vm-imap-account-alist)
-	comps account-comps)
-    (setq comps (vm-imap-parse-spec-to-list spec))
-    (catch 'return
-    (while alist
-      (setq account-comps (vm-imap-parse-spec-to-list (car (car alist))))
-      (if (and (equal (nth 1 comps) (nth 1 account-comps)) ; host
-	       (equal (nth 5 comps) (nth 5 account-comps))) ; login
-	  (throw 'return (cadr (car alist)))
-	(setq alist (cdr alist))))
-    nil)))
-
-;;;###autoload
-(defun vm-imap-folder-for-spec (spec)
-  "Returns the IMAP folder for maildrop specification SPEC in the
-format account:mailbox."
-  (let (comps account-comps (alist vm-imap-account-alist))
-    (setq comps (vm-imap-parse-spec-to-list spec))
-    (catch 'return
-    (while alist
-      (setq account-comps (vm-imap-parse-spec-to-list (car (car alist))))
-      (if (and (equal (nth 1 comps) (nth 1 account-comps)) ; host
-	       (equal (nth 5 comps) (nth 5 account-comps))) ; login
-	  (throw 'return (concat (cadr (car alist)) ":" (nth 3 comps)))
-	(setq alist (cdr alist))))
-    nil)))
-
-;;;###autoload
-(defun vm-imap-spec-for-account (account)
-  "Returns the IMAP maildrop spec for ACCOUNT, by looking up
-`vm-imap-account-alist' or nil if there is no such account."
-  (car (rassoc (list account) vm-imap-account-alist)))
-
-;;;###autoload
-(defun vm-imap-parse-spec-to-list (spec)
-  "Parses the IMAP maildrop specification SPEC and returns a list of
-its components."
-  (let ((list (vm-parse spec "\\([^:]+\\):?" 1 6)))
-    list))
-
-;;;###autoload
-(defun vm-imap-encode-list-to-spec (list)
-  "Convert a LIST of components into a maildrop specification."
-    (mapconcat 'identity list ":"))
-
-;;;###autoload
-(defun vm-imap-spec-for-mailbox (spec mailbox)
-  "Return a modified version of the maildrop specification SPEC
-for accessing MAILBOX."
-  (let ((list (vm-parse spec "\\([^:]+\\):?" 1 6)))
-    (mapconcat 'identity 
-	       (append (vm-elems 3 list) (cons mailbox (nthcdr 4 list)))
-	       ":")))
-
-(defun vm-imap-spec-list-to-host-alist (spec-list)
-  (let (host-alist spec host)
-    (while spec-list
-      (setq spec (vm-imapdrop-sans-password-and-mailbox (car spec-list)))
-      (setq host-alist (cons
-			(list
-			 (nth 1 (vm-imap-parse-spec-to-list spec))
-			 spec)
-			host-alist)
-	    spec-list (cdr spec-list)))
-    host-alist ))
-
 (defvar vm-imap-account-folder-cache nil
   "Caches the list of all folders on an IMAP account.")
 
@@ -4023,8 +4033,9 @@ IMAP mailbox spec."
 	  (vm-buffer-type:enter 'process)
 	  (vm-imap-session-type:assert-active)
 	  ;;----------------------------------
-	  (vm-imap-send-command process (format "LIST %s \"\""
-						(vm-imap-quote-string ref)))
+	  (vm-imap-send-command 
+	   process 
+	   (format "LIST %s \"\"" (vm-imap-quote-mailbox-name ref)))
 	  ;;--------------------------------
 	  (vm-imap-dump-uid-seq-num-data)
 	  ;;--------------------------------
@@ -4075,9 +4086,10 @@ selectable mailboxes to be listed.  Returns a list of mailbox names."
 		     (setq r (nthcdr 4 response)
 			   p (car r))
 		     (if (memq (car p) '(atom string))
-			 (setq c-list (cons (buffer-substring
-					     (nth 1 p) (nth 2 p))
-					    c-list)))))))
+			 (setq c-list 
+			       (cons (vm-imap-decode-mailbox-name
+				      (buffer-substring (nth 1 p) (nth 2 p)))
+				     c-list)))))))
 	  c-list )
       ;; unwind-protections
       ;;-------------------
@@ -4100,7 +4112,9 @@ well. Returns a boolean value."
 	  (vm-imap-session-type:assert-active)
 	  (vm-imap-dump-uid-seq-num-data)
 	  ;;----------------------------------
-	  (vm-imap-send-command process (concat "LIST \"\" \"" mailbox "\""))
+	  (vm-imap-send-command 
+	   process 
+	   (format "LIST %s" (vm-imap-quote-mailbox-name mailbox)))
 	  (setq need-ok t)
 	  (while need-ok
 	    (setq response (vm-imap-read-response-and-verify process "LIST"))
@@ -4115,9 +4129,10 @@ well. Returns a boolean value."
 		     (setq r (nthcdr 4 response)
 			   p (car r))
 		     (if (memq (car p) '(atom string))
-			 (setq c-list (cons (buffer-substring 
-					     (nth 1 p) (nth 2 p))
-					    c-list)))))))
+			 (setq c-list 
+			       (cons (vm-imap-decode-mailbox-name
+				      (buffer-substring (nth 1 p) (nth 2 p)))
+				     c-list)))))))
 	  c-list )
       ;; unwind-protections
       ;;-------------------
@@ -4155,21 +4170,25 @@ well. Returns a boolean value."
 	  ;; real error if the final mailbox creation fails.
 	  (vm-imap-read-boolean-response process)
 	  (setq i (match-end 0)))))
-  (vm-imap-send-command process (format "CREATE %s"
-					(vm-imap-quote-string mailbox)))
+  (vm-imap-send-command 
+   process 
+   (format "CREATE %s" (vm-imap-quote-mailbox-name mailbox)))
   (if (null (vm-imap-read-boolean-response process))
       (vm-imap-normal-error "creation of %s failed" mailbox)))
 
 (defun vm-imap-delete-mailbox (process mailbox)
-  (vm-imap-send-command process (format "DELETE %s"
-					(vm-imap-quote-string mailbox)))
+  (vm-imap-send-command 
+   process 
+   (format "DELETE %s" (vm-imap-quote-mailbox-name mailbox)))
   (if (null (vm-imap-read-boolean-response process))
       (vm-imap-normal-error "deletion of %s failed" mailbox)))
 
 (defun vm-imap-rename-mailbox (process source dest)
-  (vm-imap-send-command process (format "RENAME %s %s"
-					(vm-imap-quote-string source)
-					(vm-imap-quote-string dest)))
+  (vm-imap-send-command 
+   process 
+   (format "RENAME %s %s"
+	   (vm-imap-quote-mailbox-name source)
+	   (vm-imap-quote-mailbox-name dest)))
   (if (null (vm-imap-read-boolean-response process))
       (vm-imap-normal-error "renaming of %s to %s failed" source dest)))
 
@@ -4414,7 +4433,8 @@ message count and recent message count (a list of two numbers)."
       ;;-----------------------------
       (vm-imap-send-command 
        process 
-       (format "STATUS %s (MESSAGES RECENT)" (vm-imap-quote-string mailbox)))
+       (format "STATUS %s (MESSAGES RECENT)"
+               (vm-imap-quote-mailbox-name mailbox)))
       (while need-ok
 	(setq response (vm-imap-read-response-and-verify process "STATUS"))
 	(cond ((vm-imap-response-matches response 'VM 'OK)
@@ -4533,11 +4553,12 @@ folder."
 	    ;; (vm-imap-session-type:assert-active)
 	    ;;----------------------------------
 
-	    (vm-imap-send-command process
-				  (format "APPEND %s %s {%d}"
-					  (vm-imap-quote-string mailbox)
-					  (if flags flags "()")
-					  (length string)))
+	    (vm-imap-send-command 
+	     process
+	     (format "APPEND %s %s {%d}"
+		     (vm-imap-quote-mailbox-name mailbox)
+		     (if flags flags "()")
+		     (length string)))
 	    ;; could these be done with vm-imap-read-boolean-response?
 	    (let ((need-plus t) response)
 	      (while need-plus
